// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSigningBytes should return transaction bytes for given asset 1`] = `
Object {
  "data": Array [
    8,
    8,
    16,
    1,
    24,
    128,
    173,
    226,
    4,
    34,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    42,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`signMultiSignatureTransaction should sign and include sender signature at position zero for given sender passphrase 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "fee": 10000000n,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        49,
        2,
        198,
        160,
        20,
        107,
        43,
        196,
        197,
        138,
        129,
        205,
        242,
        167,
        115,
        248,
        92,
        142,
        170,
        135,
        75,
        184,
        38,
        246,
        191,
        187,
        131,
        148,
        120,
        254,
        127,
        103,
        54,
        156,
        85,
        202,
        214,
        64,
        237,
        151,
        34,
        184,
        191,
        103,
        197,
        229,
        48,
        188,
        226,
        197,
        97,
        243,
        168,
        61,
        18,
        65,
        8,
        159,
        191,
        247,
        199,
        114,
        113,
        8,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [],
      "type": "Buffer",
    },
    Object {
      "data": Array [],
      "type": "Buffer",
    },
    Object {
      "data": Array [],
      "type": "Buffer",
    },
  ],
  "type": 8,
}
`;

exports[`signMultiSignatureTransaction should sign and return signature for sender passphrase 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "fee": 10000000n,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        43,
        86,
        227,
        162,
        157,
        43,
        164,
        45,
        54,
        106,
        81,
        181,
        51,
        30,
        229,
        165,
        241,
        47,
        61,
        5,
        3,
        205,
        255,
        7,
        194,
        18,
        163,
        183,
        8,
        70,
        134,
        23,
        94,
        53,
        253,
        26,
        166,
        247,
        175,
        33,
        182,
        69,
        211,
        230,
        235,
        169,
        195,
        198,
        107,
        97,
        2,
        214,
        17,
        172,
        253,
        133,
        166,
        124,
        145,
        23,
        186,
        96,
        119,
        7,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        38,
        86,
        8,
        85,
        112,
        1,
        89,
        191,
        63,
        202,
        252,
        44,
        220,
        24,
        47,
        43,
        79,
        225,
        196,
        216,
        134,
        141,
        7,
        131,
        107,
        123,
        252,
        118,
        116,
        238,
        68,
        244,
        4,
        60,
        88,
        137,
        161,
        105,
        27,
        30,
        25,
        226,
        111,
        222,
        146,
        193,
        231,
        20,
        249,
        226,
        168,
        56,
        27,
        49,
        35,
        179,
        172,
        167,
        67,
        120,
        18,
        223,
        44,
        14,
      ],
      "type": "Buffer",
    },
  ],
  "type": 8,
}
`;

exports[`signTransaction should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "fee": 10000000n,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        49,
        2,
        198,
        160,
        20,
        107,
        43,
        196,
        197,
        138,
        129,
        205,
        242,
        167,
        115,
        248,
        92,
        142,
        170,
        135,
        75,
        184,
        38,
        246,
        191,
        187,
        131,
        148,
        120,
        254,
        127,
        103,
        54,
        156,
        85,
        202,
        214,
        64,
        237,
        151,
        34,
        184,
        191,
        103,
        197,
        229,
        48,
        188,
        226,
        197,
        97,
        243,
        168,
        61,
        18,
        65,
        8,
        159,
        191,
        247,
        199,
        114,
        113,
        8,
      ],
      "type": "Buffer",
    },
  ],
  "type": 8,
}
`;
